# tds-dev

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
data/swimmer/swimmer05/: model.xml  swimmer05.urdf
data/swimmer/swimmer05/common/: materials.xml  skybox.xml  visual.xml
examples/: CMakeLists.txt  billiard_opt_gui.cpp  ceres_estimation.cpp  cuda_codegen.cpp  enoki_hello_world.cpp  generic_urdf_collision.cpp  laikago_footstep_ik.cpp  meshcat_urdf_visualizer.h  neural_contact.cpp  neural_discovery.cpp  neural_heightfield.cpp  neural_joint.cpp  neural_pendulum.cpp  neural_wtf.cpp  opengl_imgui_test.cpp  opengl_test.cpp  opengl_urdf_visualizer.h  pendulum_example_eigen.cpp  pendulum_example_gui.cpp  plot_utils.h  policy_optimization.cpp  tiny_ceres_estimator.h  tiny_mesh_utils.h  tiny_urdf_parser_example.cpp  tiny_urdf_parser_opengl_example.cpp  world_example_gui.cpp
examples/old/: cartpole_opt.cpp  contact_discovery.cpp  gravity_compensation.cpp  laikago_example_gui.cpp  laikago_footstep_ik.cpp  laikago_meshcat_example.cpp  neural_actuator.cpp  pendulum_analytic_example_gui.cpp  pendulum_ik_gui.cpp  policy_optimization.cpp  tiny_traj_opt.h  torch_example.cpp
examples/opengl_window/: CMakeLists.txt  tiny_egl_opengl_window.cpp  tiny_font_stash.cpp  tiny_gl_instancing_renderer.cpp  tiny_glfw_opengl_window.cpp  tiny_opengl3_app.cpp  tiny_opengl_fontstashcallbacks.cpp  tiny_opengl_include.h  tiny_x11_opengl_window.cpp
python/: pytinydiffsim.cc  pytinydiffsim.inl  pytinydiffsim_includes.h
src/: contact_point.hpp  link.hpp  mb_constraint_solver.hpp  mb_constraint_solver_spring.hpp  multi_body.hpp  rb_constraint_solver.hpp  rigid_body.hpp  world.hpp
src/dynamics/: forward_dynamics.hpp  jacobian.hpp
src/math/: conditionals.hpp  eigen_algebra.hpp  inertia.hpp  neural_network.hpp  pose.hpp  transform.hpp
src/math/eigen/: eigen_algebra.hpp  eigen_vector3.hpp
src/math/tiny/: cppad_utils.h  neural_scalar.hpp  tiny_algebra.hpp  tiny_dual.h  tiny_dual_double_utils.h  tiny_dual_utils.h  tiny_matrix3x3.h  tiny_matrix_x.h  tiny_vector3.h
src/urdf/: pybullet_urdf_import.hpp  urdf_cache.hpp  urdf_to_multi_body.hpp
src/utils/: ceres_estimator.hpp  cuda_codegen.hpp  differentiation.hpp  experiment.hpp  neural_augmentation.hpp  optim_gd.hpp  optimization_problem.hpp  parameter.hpp  pendulum.hpp
src/visualizer/pybullet/: CMakeLists.txt
test/: CMakeLists.txt  adbench.cpp  adproblem.hpp  adtest.cpp  estimation_utils.hpp  rbdl_test_utils.hpp  test_ceres_estimation.cpp  test_codegen.cpp  test_gradients.cpp  test_pagmo_estimation.cpp  test_rbdl.cpp
